--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,15 @@
 layout: default
 ---
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-113713525-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-113713525-1');
+</script>
+
 <div class="home">
   {% if site.theme_settings.header_text %}
   <div class="call-out"
